--- a/app/views/lfd-collection-registration/v1/confirmation.html
+++ b/app/views/lfd-collection-registration/v1/confirmation.html
@@ -40,7 +40,7 @@ set version = "v1" %}
 
     <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-8" style="text-align: center; line-height: 1em;">
       Collect code reference:<br><br>
-      NYX7 - CT5Z - 8VF7 - 7FW4</p>
+      <strong>NYX7 - CT5Z - 8VF7 - 7FW4</strong></p>
     
     <!-- <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"> -->
 
