--- a/app/views/lfd-collection-registration/v1/confirmation-option-2.html
+++ b/app/views/lfd-collection-registration/v1/confirmation-option-2.html
@@ -40,7 +40,7 @@ set version = "v1" %}
 
     <p class="govuk-body govuk-!-margin-top-6 govuk-!-margin-bottom-8" style="text-align: center; line-height: 1em;">
       Collect code reference:<br><br>
-      <span class="govuk-!-margin-right-2">NYX7</span><span class="govuk-!-margin-right-2">CT5Z</span><span class="govuk-!-margin-right-2">8VF7</span><span>7FW4</span>
+      <strong><span class="govuk-!-margin-right-2">NYX7</span><span class="govuk-!-margin-right-2">CT5Z</span><span class="govuk-!-margin-right-2">8VF7</span><span>7FW4</span></strong>
     </p>
 
     <h3 class="govuk-heading-s govuk-!-margin-top-6">What happens next</h3>
@@ -74,7 +74,7 @@ set version = "v1" %}
 </div>
 
 <div class="proto-action big" style="bottom: 130px;">
-  <a href="/lfd-collection-registration/v1/confirmation-email">
+  <a href="/lfd-collection-registration/v1/confirmation">
     <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 1</div>
   </a>
 </div>
