--- a/app/views/lfd-collection-registration/v1/index.html
+++ b/app/views/lfd-collection-registration/v1/index.html
@@ -128,7 +128,7 @@
                   <h2 class="govuk-heading-m">How it works</h2>
                   <p class="govuk-body goovuk-!-margin-bottom-2">
                     <strong>1. Register your details</strong><br><br>
-                    To collect your test packs from a collection point, you’ll need to register a few. details. You can also save your details by creating an account, so it’s quicker to register next time.<br><br>
+                    To collect your test packs from a collection point, you’ll need to register a few details. You can also save your details by creating an account, so it’s quicker to register next time.<br><br>
                     <strong>2. Get your collect code</strong><br><br>
                     After you register, you’ll get a ‘collect code’ by email or text. This is a QR code that you need to show when you collect your test packs. You’ll also have the option to print your collect code.<br><br>
                     <strong>3. Collect your test pack</strong><br><br>
