--- a/app/views/logresults-web-service/v2/site-operative/qr-code-person.html
+++ b/app/views/logresults-web-service/v2/site-operative/qr-code-person.html
@@ -60,8 +60,20 @@
 
 {% block bodyEnd %}
 <div class="proto-action big">
-  <a href="/logresults-web-service/{{version}}/site-operative/enter-lot-reference">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Continue</div>
-  </a>
+  <form action="/logresults-web-service/{{version}}/site-operative/action13/confirm-collect-code" style="height: 100%;" method="post">
+    <!-- <input class="govuk-radios__input" name="reason-for-test" type="radio" value="" style="display: none;" checked>
+    <input class="govuk-radios__input" name="who-asked-for-test" type="radio" value="" style="display: none;" checked> -->
+    <button 
+      class="proto-link-button"
+      data-module="govuk-button"
+      style="cursor: pointer; outline: none; border: none; background-color: transparent; width: 100%; height: 100%; padding: 0; margin: 0"
+      >
+      <a style="height: 100%;">
+        <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">
+          Continue
+        </div>
+      </a>
+    </button>
+  </form>
 </div>
 {% endblock %}
