--- a/app/views/antigen/v2/global-registration/delivery-postcode-person-1.html
+++ b/app/views/antigen/v2/global-registration/delivery-postcode-person-1.html
@@ -60,7 +60,7 @@
               <label class="govuk-label" for="delivery-address-antibody">
                 <strong class="govuk-!-font-size-19">Select an address</strong>
               </label>
-              <select class="govuk-select" id="delivery-address" name="delivery-address-antibody">
+              <select class="govuk-select" id="delivery-address-antibody" name="delivery-address-antibody">
                 <option>5 addresses found</option>
                 <option value="1 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}">1 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}</option>
                 <option value="2 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}">2 Souterhead Road, London, {{ data['delivery-address-postcode-antibody'] or 'LS1 3BE' }}</option>
@@ -139,16 +139,16 @@
       document.getElementById('find-address').style.display = 'none'
       document.getElementById('button-hidden').style.display = 'block'
       document.getElementById('content-2').style.display = 'block'
-      document.getElementById('delivery-address').focus()
+      document.getElementById('delivery-address-antibody').focus()
     }, 100)
   }
 
   function buttonClicked2(target) {
     setTimeout(function () {
-      document.getElementById('delivery-address').value = '5 addresses found'
+      document.getElementById('delivery-address-antibody').value = '5 addresses found'
       document.getElementById('content-2').style.display = 'none'
       document.getElementById('content-3').style.display = 'block'
-      document.getElementById('delivery-address-postcode').focus()
+      document.getElementById('delivery-address-postcode-antibody').focus()
     }, 100)
   }
 
