--- a/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
@@ -5,7 +5,7 @@
 
 {% block beforeContent %}
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/antibody-test-person-1">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/people-confirmed-person-1">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/antigen/{{version}}/action6/fingerprick-test-person-1" method="post">
+      <form class="form" action="/antigen/{{version}}/action2/fingerprick-test-person-1" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="fingerprick-test-person-1-hint">
@@ -56,13 +56,13 @@
             </details>
             <div class="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-1" name="fingerprick-test-person-1" type="checkbox" value="{{data['first-name'] }} {{data['last-name']}}" {{ checked("fingerprick-test-person-1", "") }}>
+                <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-1" name="fingerprick-test-person-1" type="checkbox" value="1" {{ checked("fingerprick-test-person-1", "1") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1-1">
                   {{ data['first-name'] | default('John') }} {{ data['last-name'] | default('Smith')}}
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-2" name="fingerprick-test-person-1" type="checkbox" value="{{data['last-name-person-1']}}" {{ checked("fingerprick-test-person-1", "") }}>
+                <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-2" name="fingerprick-test-person-1" type="checkbox" value="2" {{ checked("fingerprick-test-person-1", "2") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1-2">
                   {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Smith') }}
                 </label>
