--- a/app/views/antigen/v2/global-registration/fingerprick-test-person-1-error.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test-person-1-error.html
@@ -5,7 +5,7 @@
 
 {% block beforeContent %}
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/antibody-test-person-1">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/people-confirmed-person-1">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -69,13 +69,13 @@
               </span>
               <div class="govuk-checkboxes">
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="fingerprick-test-person-1" name="fingerprick-test-person-1" type="checkbox" value="" {{ checked("fingerprick-test-person-1", "") }}>
+                  <input class="govuk-checkboxes__input" id="fingerprick-test-person-1" name="fingerprick-test-person-1" type="checkbox" value="1" {{ checked("fingerprick-test-person-1", "1") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1">
                     {{ data['first-name'] | default('John') }} {{ data['last-name'] | default('Smith')}}
                   </label>
                 </div>
                 <div class="govuk-checkboxes__item">
-                  <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-2" name="fingerprick-test-person-1" type="checkbox" value="" {{ checked("fingerprick-test-person-1", "") }}>
+                  <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-2" name="fingerprick-test-person-1" type="checkbox" value="2" {{ checked("fingerprick-test-person-1", "2") }}>
                   <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1-2">
                     {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Smith') }}
                   </label>
