--- a/app/views/antigen/v2/global-registration/delivery-postcode-person-1.html
+++ b/app/views/antigen/v2/global-registration/delivery-postcode-person-1.html
@@ -106,14 +106,14 @@
               <label class="govuk-label" for="delivery-address-town-antibody">
                 <strong>Town or city</strong>
               </label>
-              <input class="govuk-input govuk-!-width-one-third" id="delivery-address-town" name="delivery-address-town-antibody" type="text" autocomplete="address-level2-delivery" value="{{ data['delivery-address-town-antibody'] }}">
+              <input class="govuk-input govuk-!-width-one-third" id="delivery-address-town-antibody" name="delivery-address-town-antibody" type="text" autocomplete="address-level2-delivery" value="{{ data['delivery-address-town-antibody'] }}">
             </div>
 
             <div class="govuk-form-group">
               <label class="govuk-label" for="delivery-address-postcode-manual-antibody">
                 <strong>Postcode</strong>
               </label>
-              <input class="govuk-input govuk-input--width-10" id="delivery-address-postcode-manual" name="delivery-address-postcode-manual-antibody" type="text" autocomplete="postal-code" value="{{ data['delivery-address-postcode-manual-antibody'] }}">
+              <input class="govuk-input govuk-input--width-10" id="delivery-address-postcode-manual-antibody" name="delivery-address-postcode-manual-antibody" type="text" autocomplete="postal-code" value="{{ data['delivery-address-postcode-manual-antibody'] }}">
             </div>
           </div>
 
