--- a/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
@@ -58,13 +58,13 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-1" name="fingerprick-test-person-1" type="checkbox" value="1" {{ checked("fingerprick-test-person-1", "1") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1-1">
-                  {{ data['first-name'] | default('John') }} {{ data['last-name'] | default('Smith')}}
+                  {{ data['first-name'] | default('Pete') }} {{ data['last-name'] | default('Smith')}}
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-2" name="fingerprick-test-person-1" type="checkbox" value="2" {{ checked("fingerprick-test-person-1", "2") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1-2">
-                  {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Smith') }}
+                  {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Wilson') }}
                 </label>
               </div>
               <div class="govuk-radios__divider">or</div>
