--- a/app/views/includes/layout.html
+++ b/app/views/includes/layout.html
@@ -74,6 +74,10 @@
           {
             href: "#",
             text: "Terms and conditions"
+          },
+          {
+            href: "/prototype-admin/clear-data",
+            text: "Clear data"
           }
         ]
       }
