--- a/app/views/lfd-collection-registration/v1/index.html
+++ b/app/views/lfd-collection-registration/v1/index.html
@@ -121,7 +121,7 @@
                 <div class="govuk-grid-column-two-thirds">
 
                   <p class="govuk-body govuk-!-margin-bottom-6">
-                    Use this service to get your collect code so you can pick up rapid lateral flow test packs from a collection point near you.<br><br>
+                    Use this service to register your details so you can collect rapid lateral flow test packs from a collection point near you.<br><br>
                     Or you can collect test packs from your local pharmacy and register your details there.
                   </p>
 
