--- a/app/views/lfd-collection-registration/v1/pharmacy-collection.html
+++ b/app/views/lfd-collection-registration/v1/pharmacy-collection.html
@@ -38,7 +38,7 @@
                       <br><br>
                       If you go to a pharmacy, you’ll need to register your details there. You do not need to use a collect code.
                       <br><br>
-                      <a href="https://find-covid-19-rapid-test-sites.maps.test-and-trace.nhs.uk/" class="govuk-link" target="blank">Find your nearest collection point</a>.
+                      <a href="https://find-covid-19-rapid-test-sites.maps.test-and-trace.nhs.uk/" class="govuk-link" target="blank">Find your nearest collection point</a>
 
 
 
