--- a/app/views/lfd-collection-registration/v1/sms.html
+++ b/app/views/lfd-collection-registration/v1/sms.html
@@ -84,7 +84,7 @@
 
           In each test pack you’ll find 7 rapid lateral flow tests and instructions on how to take the test and report results.<br><br>
 
-          Got any questions? Call our customer contact centre between 7am and 11pm:<br><br>
+          Got any questions? Call our contact centre between 7am and 11pm:<br><br>
 
           England, Wales and Northern Ireland: call 119 (free from mobiles and landlines)<br><br>
 
