--- a/app/views/lfd-collection-registration/v1/sms.html
+++ b/app/views/lfd-collection-registration/v1/sms.html
@@ -74,7 +74,7 @@
           Dear Pete Boam<br>
           Date of birth: 19 July 1976<br><br>
 
-          Here is your collect code:<br><br>
+          Here's your collect code:<br>
 
           <span class="govuk-!-margin-right-2">NYX7</span><span class="govuk-!-margin-right-2">CT5Z</span><span class="govuk-!-margin-right-2">8VF7</span><span>7FW4</span><br><br>
 
@@ -88,7 +88,8 @@
 
           England, Wales and Northern Ireland: call 119 (free from mobiles and landlines)<br><br>
 
-          Scotland: call 0300 303 2713 (charged at your standard network rate)
+          Scotland: call 0300 303 2713
+          <!-- (charged at your standard network rate) -->
         </p>
       </div>
 
