--- a/app/views/lfd-collection-registration/v1/check-your-answers.html
+++ b/app/views/lfd-collection-registration/v1/check-your-answers.html
@@ -152,9 +152,10 @@
             {% endif %}
           </dd>
         </div>
+        {% if data['country'] != 'Scotland' %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key govuk-!-width-one-third">
-            Do you work for NHS England and take part in their staff testing programme?
+            Do you work for the NHS in England and take part in their staff testing programme?
           </dt>
           <dd class="govuk-summary-list__value govuk-!-width-one-third">
             {{ data['nhs-testing-programme'] or 'No' }}
@@ -166,6 +167,8 @@
             </a>
           </dd>
         </div>
+        {% endif %}
+
         {% if data['nhs-testing-programme'] == "Yes" %}
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key govuk-!-width-one-third">
