update prototype kit to version 9.9.0

--- a/docs/views/tutorials-and-examples.html
+++ b/docs/views/tutorials-and-examples.html
@@ -104,7 +104,7 @@
           <a href="/docs/tips-and-tricks">Tips and tricks</a>
         </li>
         <li>
-          <a href="/docs/updating-the-kit">Updating the kit</a>
+          <a href="/docs/updating-the-kit">Updating to the latest version</a>
         </li>
       </ul>
     </div>
