--- a/docs/views/tutorials-and-examples.html
+++ b/docs/views/tutorials-and-examples.html
@@ -17,13 +17,12 @@
 
 {% block content %}
 
-  <h1 class="govuk-heading-xl">Tutorials and examples</h1>
+<h1 class="govuk-heading-xl">Tutorials and page templates</h1>
 
   <div class="govuk-grid-row">
 
     <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-m">Tutorials</h2>
-      <p>These tutorials are being actively developed. If you have suggestions for improvements, we'd love to hear from you.</p>
     </div>
   </div>
   <div class="govuk-grid-row">
@@ -86,9 +85,6 @@
           <a href="/docs/usage-data">Sending kit usage data</a>
         </li>
         <li>
-          <a href="/docs/making-pages">Making pages</a>
-        </li>
-        <li>
           <a href="/docs/adding-css-javascript-and-images">Adding CSS, JavaScript and Images</a>
         </li>
         <li>
@@ -99,9 +95,6 @@
         </li>
         <li>
           <a href="/docs/examples/template-data">Passing data into a template</a>
-        </li>
-        <li>
-          <a href="/docs/tips-and-tricks">Tips and tricks</a>
         </li>
         <li>
           <a href="/docs/updating-the-kit">Updating to the latest version</a>
