--- a/app/views/antigen/v2/global-registration/ethnic-background-another-person-1.html
+++ b/app/views/antigen/v2/global-registration/ethnic-background-another-person-1.html
@@ -54,7 +54,7 @@
                   <label class="govuk-label" for="another-ethnic-background-person-1">
                     How would you describe your background? (optional)
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="another-ethnic-background-person-1" name="another-ethnic-background-person-1" type="tel" value="{{ data['another-ethnic-background-person-1'] }}">
+                  <input class="govuk-input govuk-!-width-one-third" id="another-ethnic-background-person-1" name="another-ethnic-background-person-1" type="text" value="{{ data['another-ethnic-background-person-1'] }}">
                 </div>
               </div>
   
