--- a/app/views/antigen/v2/global-registration/ethnic-background-another.html
+++ b/app/views/antigen/v2/global-registration/ethnic-background-another.html
@@ -54,7 +54,7 @@
                   <label class="govuk-label" for="another-ethnic-background">
                     How would you describe your background? (optional)
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="another-ethnic-background" name="another-ethnic-background" type="tel" value="{{ data['another-ethnic-background'] }}">
+                  <input class="govuk-input govuk-!-width-one-third" id="another-ethnic-background" name="another-ethnic-background" type="text" value="{{ data['another-ethnic-background'] }}">
                 </div>
               </div>
   
