--- a/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
@@ -73,7 +73,7 @@
         </strong>
       </div>
 
-      <form class="form" action="/antigen/{{version}}/global-registration/name-person-1" method="post" style="display: inline-block;">
+      <form class="form" action="#" method="post" style="display: inline-block;">
 
         <button class="govuk-button govuk-button--secondary govuk-!-margin-right-1" data-module="govuk-button">Add another person you live with</button>
 
