--- a/app/views/antigen/v2/global-registration/edit-check-answers-person-1/check-your-answers-person-1.html
+++ b/app/views/antigen/v2/global-registration/edit-check-answers-person-1/check-your-answers-person-1.html
@@ -15,10 +15,7 @@
     </p>
   </div>
 
-  {{ govukBackLink({
-    text: "Back",
-    href: "javascript:window.history.go(-1);"
-  }) }}
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/antibody-test-confirmation-person-1">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -378,7 +375,6 @@
         </div>
         {% endif %}
         </dl>
-        {% if data['fingerprick-test-person-1'] %}
         <h2 class="govuk-heading-l govuk-!-margin-bottom-3">Antibody test details</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -393,7 +389,7 @@
               {% endif %}
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a href="/antigen/{{version}}/global-registration/fingerprick-test-person-1">
+              <a href="/antigen/{{version}}/global-registration/edit-check-answers-person-1/fingerprick-test-person-1">
                 Change
                 <span class="govuk-visually-hidden">antibody test</span>
               </a>
@@ -425,9 +421,8 @@
           </div>
           {% endif %}
         </dl>
-        {% endif %}
 
-      <form action="/antigen/{{version}}/global-registration/fingerprick-test-person-1" method="post" style="display: inline-block;" novalidate>
+      <form action="/antigen/{{version}}/global-registration/antibody-test-confirmation-person-1" method="post" style="display: inline-block;" novalidate>
 
         <input type="hidden" name="answers-checked" value="true">
 
@@ -436,12 +431,12 @@
         </button>
 
       </form>
-
+<!-- 
       <form class="form" action="#" method="post" style="display: inline-block;">
 
         <button class="govuk-button govuk-button--secondary govuk-!-margin-left-1" data-module="govuk-button">Add person you live with</button>
 
-      </form>
+      </form> -->
 
     </div>
   </div>
