--- a/app/views/antigen/v2/order-home-test-kit/index.html
+++ b/app/views/antigen/v2/order-home-test-kit/index.html
@@ -26,7 +26,7 @@
 
     <p class="govuk-body">This is so we can deliver the test kit to their home.</p>
 
-    {% if data['delivery-address-postcode-antibody'] or data['delivery-address-postcode-antibody-placeholder'] %}
+    {% if data['delivery-address-postcode-antibody'] or data['delivery-address-postcode-antibody-placeholder'] or data['fingerprick-test-person-1'] == "1" or data['fingerprick-test-person-1'] == "1,2" or data['fingerprick-test-person-1'] == "2" %}
     <a href="/antigen/{{version}}/order-home-test-kit/confirm-email-address" role="button" draggable="false" class="govuk-button govuk-!-margin-top-5 govuk-!-margin-bottom-8" data-module="govuk-button">
       Continue
     </a>
