--- a/app/views/antigen/v2/global-registration/edit-check-answers-person-1/check-your-answers.html
+++ b/app/views/antigen/v2/global-registration/edit-check-answers-person-1/check-your-answers.html
@@ -15,10 +15,7 @@
   </p>
 </div>
 
-{{ govukBackLink({
-  text: "Back",
-  href: "javascript:window.history.go(-1);"
-}) }}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/antibody-test-confirmation-person-1">Back</a>
 
 {% endblock %}
 
@@ -378,7 +375,6 @@
         </div>
         {% endif %}
         </dl>
-        {% if data['fingerprick-test'] == "Yes" or data['fingerprick-test-person-1'] %}
         <h2 class="govuk-heading-l govuk-!-margin-bottom-3">Antibody test details</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -389,7 +385,7 @@
               {{ data['fingerprick-test'] or 'Yes' }}
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a href="/antigen/{{version}}/global-registration/fingerprick-test">
+              <a href="/antigen/{{version}}/global-registration/edit-check-answers-person-1/fingerprick-test-person-1">
                 Change
                 <span class="govuk-visually-hidden">antibody test</span>
               </a>
@@ -416,9 +412,8 @@
             </dd>
           </div>
         </dl>
-        {% endif %}
 
-      <form action="/antigen/{{version}}/global-registration/fingerprick-test" method="post" style="display: inline-block;" novalidate>
+      <form action="/antigen/{{version}}/global-registration/antibody-test-confirmation-person-1" method="post" style="display: inline-block;" novalidate>
 
         <input type="hidden" name="answers-checked" value="true">
 
@@ -428,11 +423,11 @@
 
       </form>
 
-      <form class="form" action="/antigen/{{version}}/global-registration/name-person-1" method="post" style="display: inline-block;">
+      <!-- <form class="form" action="/antigen/{{version}}/global-registration/name-person-1" method="post" style="display: inline-block;">
 
         <button class="govuk-button govuk-button--secondary govuk-!-margin-left-1" data-module="govuk-button">Add person you live with</button>
 
-      </form>
+      </form> -->
 
     </div>
 
