--- a/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
@@ -1,11 +1,11 @@
 {% set version = "v2" %}
-{% set pageTitle = "Who would be willing to take an antibody test?" %}
+{% set pageTitle = "Who would also be willing to take a separate antibody test?" %}
 
 {% extends "includes/layout.html" %}
 
 {% block beforeContent %}
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/people-confirmed-person-1">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/check-your-answers-person-1">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -23,19 +23,26 @@
                 {{ pageTitle }}
               </h1>
             </legend>
-            <span id="fingerprick-test-person-1-hint" class="govuk-body">
-              An antibody test is a fingerprick blood test to check if you've have coronavirus (COVID-19) before.<br><br>
-              You can do the test at home by yourself, you can ask a friend or relative to help if you want.<br><br>
-              The fingerprick test lets us see if your current symptoms are from a reinfection.<br><br>
-              Taking the test helps the NHS and research scientists learn more about who's had the virus more than once, and how it has spread.<br><br>
-              You are only eligible for an antibody test if you test positive for coronavirus. The antibody test kits will be sent to you automatically if you test positive for coronavirus, we just need your delivery address.
-            </span><br><br>
-            <span id="fingerprick-test-person-1-hint" class="govuk-body">
-            Watch how to collect your blood sample:
-            </span>
-            <div class="govuk-!-margin-bottom-5 govuk-!-margin-top-4 videoWrapper">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/okTozcGMDlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+            <span id="fingerprick-test-hint" class="govuk-body">
+              If you test positive for coronavirus, we will send you an antibody kit - a fingerprick blood test to see if you’ve had a previous infection. This will help the NHS learn more about who’s had the virus more than once, and how it has spread.<br><br>
+              You will need to do 2 tests, 3 weeks apart. You do the test at home by yourself. You can ask a friend or relative to help if you want.<br><br>
+              If you agree the antibody test kits will be sent to you automatically.<br><br>
+              Antibody tests are only available to people aged 18 and over.
+            </span><br><br><br>
+
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  Video: How to collect your blood sample
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                <div class="govuk-!-margin-bottom-5 govuk-!-margin-top-4 videoWrapper">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/okTozcGMDlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+              </div>
+            </details>
+
             <details class="govuk-details" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
@@ -50,39 +57,40 @@
                   Finally, you'll label your tube, package everything up and pop it in a postbox.
                 </p>
               </div>
-              <div class="govuk-details__text">
-
-              </div>
             </details>
+
+            <div class="govuk-warning-text">
+              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+              <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                By selecting continue you confirm that these household members are OK doing a fingerprick blood test, and do not take anticoagulants ('blood-thinning' medicines) or  have a blood clotting disorder such as haemophilia. 
+              </strong>
+            </div>
+
             <div class="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-1" name="fingerprick-test-person-1" type="checkbox" value="1" {{ checked("fingerprick-test-person-1", "1") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1-1">
                   {{ data['first-name'] | default('Pete') }} {{ data['last-name'] | default('Smith')}}
+                  <span class="govuk-!-padding-left-3">( {{ data['date-of-birth-day'] or '6 December 1976' }} {{ data['date-of-birth-month'] }} {{ data['date-of-birth-year'] }} )</span>
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-2" name="fingerprick-test-person-1" type="checkbox" value="2" {{ checked("fingerprick-test-person-1", "2") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1-2">
                   {{ data['first-name-person-1'] | default('Jane') }} {{ data['last-name-person-1'] | default('Wilson') }}
+                  <span class="govuk-!-padding-left-3">( {{ data['date-of-birth-day-person-1'] or '15 March 2002' }} {{ data['date-of-birth-month-person-1'] }} {{ data['date-of-birth-year-person-1'] }} )</span>
                 </label>
               </div>
               <div class="govuk-radios__divider">or</div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-3" name="fingerprick-test-person-1" type="checkbox" value="None of these" {{ checked("fingerprick-test-person-1", "None of these") }}>
+                <input class="govuk-checkboxes__input" id="fingerprick-test-person-1-3" name="fingerprick-test-person-1" type="checkbox" value="No one" {{ checked("fingerprick-test-person-1", "No one") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="fingerprick-test-person-1-3">
-                  None of these
+                  No one
                 </label>
               </div>
             </div>
           </fieldset>
-        </div>
-        <div class="govuk-warning-text">
-          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-          <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive">Warning</span>
-            By selecting continue you confirm that the selected household members are OK doing a fingerprick blood test and do not take anticoagulants ('blood thinning' medicines) or have a blood clotting disorder such as haemophilia.
-          </strong>
         </div>
 
         <button class="govuk-button" data-module="govuk-button">Continue</button>
