--- a/app/views/antigen/v2/global-registration/people-confirmed.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed.html
@@ -26,9 +26,13 @@
       <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
       <p class="govuk-body">
-        You can add up to 3 people you live with for testing.<br><br>
-        A maximum of 2 people can arrive on the same motorbike. If you plan to travel by motorbike, you can only get a test for you and one other person you live with.<br><br>
-        Once you've confirmed who needs testing, you can continue.
+        You can <strong>add up to 3 people</strong> you live with for testing.<br><br>
+        If you need tests for <strong>more than 4 people</strong>, you'll need to complete this journey again and place a separate order.<br><br>
+        <strong>For test sites:</strong><br>
+        If you're arriving by motorbike, you can only take one other person you live with. They must wear full helmet and visor.<br><br>
+        If you’re arriving by car or small van, everyone must be in the same vehicle and sit next to a window that opens. You'll stay in your vehicle during your visit.<br><br>
+        <strong>For home testing:</strong><br>
+        You cannot order more than 4 home test kits at a time.
       </p>
 
       <table class="govuk-table">
