--- a/app/views/antigen/v2/order-home-test-kit/confirmation.html
+++ b/app/views/antigen/v2/order-home-test-kit/confirmation.html
@@ -18,6 +18,9 @@
 
       <p class="govuk-body"><strong>You'll also receive a confirmation email soon which includes your 10-digit order ID. Keep the order ID to hand, you'll need it later.</strong></p>
 
+      <h3 class="govuk-heading-m">Antibody testing</h3>
+      <p class="govuk-body">If you agreed to do antibody testing, you will receive your first kit in the post a couple days after your PCR test has been confirmed positive. The kit contains step-by-step instructions. It is important you do the antibody test as soon as it arrives and send it back by post.</p>
+
       <h3 class="govuk-heading-m">What to do when you receive your test kit</h3>
       <p class="govuk-body">Follow the instructions in your test kit. The instructions will tell you:</p>
 
