--- a/app/views/antigen/v2/order-home-test-kit/confirmation.html
+++ b/app/views/antigen/v2/order-home-test-kit/confirmation.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "We've received your order for a home test kit" %}
+{% set pageTitle = "We've received your order" %}
 
 {% extends "includes/layout.html" %}
 
