--- a/app/views/lfd-collection-registration/v1/country.html
+++ b/app/views/lfd-collection-registration/v1/country.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/lfd-collection-registration/{{version}}/address" method="post">
+      <form action="/lfd-collection-registration/{{version}}/action10/country" method="post">
       
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
