--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -526,6 +526,15 @@ a.card__body {
   font-weight: normal;
 }
 
+.mobile-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.mobile-center img {
+  width: 40%;
+}
+
 @media (min-width: 40.0625em) {
   .grey-box {
     position: absolute;
@@ -534,6 +543,12 @@ a.card__body {
     right: 15px;
     top: -10px;
     margin: 0
+  }
+  .mobile-center {
+    display: block;
+  }
+  .mobile-center img {
+    width: 30%;
   }
   .upper-menu {
     display: flex;
