--- a/app/views/logresults-web-service/v2/site-operative/enter-lot-reference-2.html
+++ b/app/views/logresults-web-service/v2/site-operative/enter-lot-reference-2.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Enter the LOT reference on the test pack" %}
+{% set pageTitle = "Enter test pack's LOT reference" %}
 
 {% extends "includes/layout.html" %}
 
@@ -40,7 +40,8 @@
           <br> -->
 
           <span id="lot-reference-hint" class="govuk-body">
-            You'll find the 8 character LOT reference on the back of the test pack. If you find a test pack with a different LOT reference, you must add this pack later.
+            You'll find the 8 character LOT reference on the back of the test pack.<br><br>
+            <strong>If you find a test pack with a different LOT reference, you must add this pack later.</strong>
           </span>
 
           <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
